# TSMotion

./: .gitignore  CGAL_defines.h  CMakeLists.txt  ConfigCheck.cpp  ConfigCheck.h  PathFinder.cpp  PathFinder.h  Preview_5.py  Preview_5_before_minkowski_sum_with_rectangles.py  TSPathFinder.cpp  TSPathFinder.h  TestConfigCheck.cpp  example1_obstacles  example1_robot  example2_obstacles  gen_snake_polygon.py  main.cpp  moveTests.txt  test_obstacles.txt  test_robot.txt
tests/: obs1  obs2  obs2m  obs3  rob1  rob2  rob3  test2  test2m
tests/tests_assignment_5/: gen_space_with_rest.py  tests1
tests/tests_assignment_5/MinkowskiSumProgram/: CGAL_defines.h  CMakeLists.txt  main.cpp  obs4
